<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f39c12"
    tools:context=".AboutFragment">

    <TextView
        android:id="@+id/titleabout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catatanku_app"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/aboutlogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_below="@id/titleabout"
        android:src="@drawable/coding_sloth_splash"
        android:contentDescription="@string/about_logo" />

    <TextView
        android:id="@+id/tentangapp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tentang_aplikasi"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@+id/aboutlogo"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tentangapp">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/versi_aplikasi_v1_0"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/created_by_rachman_aldiansyah"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tahun_2022"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"/>
    </LinearLayout>

</RelativeLayout>