<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f39c12"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/lbl_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profil_mahasiswa"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/foto_pribadi"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/lbl_profile"
        android:layout_marginTop="15dp"
        android:src="@drawable/foto_pribadi"
        android:contentDescription="@string/my_profile" />

    <LinearLayout
        android:id="@+id/data_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/foto_pribadi"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_nim"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nim_10119038"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/lbl_nama"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_rachman_aldiansyah"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/lbl_kelas"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kelas_if_1"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/lbl_email"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rachman_10119038_mahasiswa_unikom_ac_id"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:textStyle="bold"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_kembali"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/data_profil"
        android:layout_centerHorizontal="true"
        android:text="@string/kembali"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:background="@color/purple_500"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"/>
</RelativeLayout>