<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f39c12"
    tools:context=".SplashActivity">

    <TextView
        android:id="@+id/lbl_splashtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:scaleType="centerCrop"
        android:textColor="@color/white"
        android:text="@string/catatanku_app"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/lbl_splashsubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif"
        android:textStyle="italic"
        android:layout_below="@id/lbl_splashtitle"
        android:scaleType="centerCrop"
        android:textColor="@color/white"
        android:text="@string/mengatur_produktivitas_anda_dengan_mudah"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/splashlogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:layout_marginTop="40dp"
        android:layout_below="@id/lbl_splashsubtitle"
        android:src="@drawable/ic_baseline_menu_book_24"
        android:contentDescription="@string/splash_book_logo" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/splashlogo"
        android:layout_marginTop="60dp"
        android:scaleType="centerCrop"/>

</RelativeLayout>